Repro of bootRun issues
Problems created when running Gradle with Java8 and a Java15 toolchain.